feat: add advance statistics
